--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "mongoose": "^5.5.15",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "webpack": "^5.70.0"
   },
   "devDependencies": {
     "webpack-cli": "^4.9.2",
