--- a/package.json
+++ b/package.json
@@ -5,11 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "webpack": "webpack --watch",
-    "build": "webpack",
-    "start:dev": "webpack-dev-server",
-    "lite-server": "lite-server"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
